q08/deplo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-app
  namespace: finance
  labels:
    app: billing-app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: billing-app
  template:
    metadata:
      labels:
        app: billing-app
    spec:
      containers:
      - name: billing-app
        image: nginx:latest
        ports:
        - containerPort: 80
