q08/q8-dev.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: dev
spec:
  containers:
    - name: deny-test
      image: busybox
      command: ["sleep", "3600"]
