q08/q8-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: web
spec:
  containers:
    - name: allow-test
      image: busybox
      command: ["sleep", "3600"]
