q08/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-namespace
  namespace: finance 
spec:
  podSelector:
    matchLabels:
      app: billing-app 
  policyTypes:
    - Ingress 
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: web
