q08/q8-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web
  namespace: finance
spec:
  podSelector:
    matchLabels:
      app: billing-app
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: web
